--- a/src/components/templates/HomePage/SearchForm/react-select-styles.scss
+++ b/src/components/templates/HomePage/SearchForm/react-select-styles.scss
@@ -1,6 +1,11 @@
 .react-select__control {
 	border: none !important;
 	box-shadow: none !important;
+	// padding-inline-start: 30px;
+	// &:before {
+	// 	content: "";
+
+	// }
 }
 
 .react-select__indicators {
